--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body {
   color: var(--color0);
 }
 
+.top_image img {
+  border: 1px solid;
+  border-color: var(--color3);
+}
+
 /*Channel selector*/
 
 /*the container must be positioned relative:*/
@@ -42,8 +47,8 @@ body {
 }
 
 .select-selected {
-  background-color: var(--color1);
   color: var(--color0);
+  background-color: var(--color1);
 }
 
 /*style the arrow inside the select element:*/
@@ -109,18 +114,14 @@ body {
   font-family: 'IBM VGA';
   font-size: 32px;
   flex: 100%;
-  background-color: black;
+  background-color: var(--color0);
 	color: var(--color1);
-	border: 1px solid white;
+	border: 1px solid var(--color2);
   padding: 12px;
 	height: 100%;
 }
-
-.top_image {
-  height: 256px;
-}
 a {
-  color: var(--color2); 
+ color: var(--color2); 
   font-family: 'IBM VGA';
   font-size: 32px;
 }
@@ -128,6 +129,3 @@ p {
   font-family: 'IBM VGA';
   font-size: 32px;
 }
-
-
-
