--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 :root {
-  --color0: black;
-  --color1: red;
-  --color2: white;
-  --color3: darkred;
+  --color0: #002b36;
+  --color1: #93a1a1;
+  --color2: #859900;
+  --color3: #586e75;
+  --bg-gif: url("Themes/solarized-dark/line.gif");
+  --bg-img: url("Themes/solarized-dark/bg.jpg");
 }
 
 @font-face {
@@ -13,7 +15,7 @@
 }
 
 body {
-  background-image: url("Images/line.gif"), url("Images/mandel.jpg");
+  background-image: var(--bg-gif), var(--bg-img);
   background-attachment: fixed;
   background-repeat: repeat;
   background-position: right bottom;
